--- a/index-style.css
+++ b/index-style.css
@@ -68,10 +68,36 @@ body {
     margin-right: 8px;
 }
 
+h1 {
+    margin-bottom: 0px;
+    border-bottom: 1px solid white;
+}
+
+
 /* Kartice sa filmovima */
+#oneMovie {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+}
+
+#ime-god {
+    height: 20%;
+}
+
+/* #iSlika {
+    height: 80%;
+    width: auto;
+} */
+
 #slika {
-    width: 100px;
+    width: 120px;
     height: auto;
+}
+
+#god {
+    font-size: 20px;
 }
 
 
