--- a/dodajfilm.css
+++ b/dodajfilm.css
@@ -22,8 +22,13 @@ form {
     padding: 0.3vh;
     width: 200px;
     margin-right: 2vw;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    text-align: center;
+    letter-spacing: 0.5px;
+    font-size: small;
 }
-#url, #submit {
+#url {
     display: flex;
     flex-direction: column;
     background-color: rgb(22, 22, 22);
@@ -31,9 +36,45 @@ form {
     padding: 0.3vh;
     width: 200px;
     color: rgb(124, 124, 124);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    text-align: center;
+    letter-spacing: 0.5px;
+    font-size: small;
+}
+#submit {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(22, 22, 22);
+    border: 1px solid rgb(82, 82, 82);
+    padding: 0.3vh;
+    width: 206.53px;
+    color: rgb(124, 124, 124);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    align-items: center;
+    letter-spacing: 0.5px;
+    font-size: small;
+}
+#naziv, #godina, #url:focus {
+    color:rgb(226, 226, 226);
+}
+#naziv:hover {
+    background-color:rgb(36, 36, 36);
+}
+#godina:hover {
+    background-color:rgb(36, 36, 36);
+}
+#url:hover {
+    background-color:rgb(36, 36, 36);
+}
+#submit:hover {
+    color: rgb(226, 226, 226);
+    border: 1px solid rgb(175, 175, 175);
 }
 #prazno {
     margin: 0 auto;
     width: 70vw;
     background-size: cover;
+    margin-bottom: 15vw;
 }
